@@ -1,4 +1,8 @@
 = Version history =
+x.x:
+
+- fixed: problem with pagesetupdone on some Elgg installations
+
 2.3 (2012-11-06):
 
 - added: custom send date option (thanks to migrax https://github.com/migrax)
